2012-12-29  Andreas Schwab  <schwab@linux-m68k.org>

	* configure.ac (TEMACS_LDFLAGS2): Don't define.
	(LIBS_GNUSTEP): Set for GNUstep and substitute.
	(LD_SWITCH_SYSTEM_TEMACS): Don't set for GNUstep.

2012-12-24  Andreas Schwab  <schwab@linux-m68k.org>

	* configure.ac (SIGNALS_VIA_CHARACTERS): Also define for darwin.
	(Bug#13222)

2012-12-20  Akinori MUSHA  <knu@iDaemons.org>  (tiny change)

	* Makefile.in (install-arch-dep): Ignore chmod errors.  (Bug#13233)

2012-12-13  Glenn Morris  <rgm@gnu.org>

	* info/dir: Add bovine, wisent.

2012-12-12  Andreas Schwab  <schwab@suse.de>

	* Makefile.in (install-info): Use `${MAKE} -s' for echo-info.
	(uninstall): Likewise.

2012-12-12  Glenn Morris  <rgm@gnu.org>

	* info/dir: Add srecode.

2012-12-11  Nicolas Richard  <theonewiththeevillook@yahoo.fr>  (tiny change)

	* Makefile.in (install-info, uninstall): Ensure make's messages
	about changing directories are in English.  (Bug#13143)

2012-12-05  Glenn Morris  <rgm@gnu.org>

	* configure.ac: Handle info/ files with or without ".info" extension.

2012-11-24  Eli Zaretskii  <eliz@gnu.org>

	* make-dist (nt): Adjust to changes in names of the *.manifest files.

2012-11-21  Glenn Morris  <rgm@gnu.org>

	* configure.ac (--enable-profiling): Doc fix.

2012-11-03  Eli Zaretskii  <eliz@gnu.org>

	* config.bat: Copy lib/execinfo.in.h to lib/execinfo.in-h if needed.

2012-10-26  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (EMACS_NAME): New variable.
	(EMACS, install-etc, uninstall): Use $EMACS_NAME.

	* Makefile.in (EMACS, EMACSFULL): Transformations should not be
	applied to $EXEEXT.

	* Makefile.in (uninstall): Don't abort if some directories are missing.
	Apply transformation rules to manual pages, desktop and icon files.
	No more emacs22 icons to uninstall.

2012-10-24  Glenn Morris  <rgm@gnu.org>

	* Makefile.in (install-etc, install-man):
	Don't apply program transform to standard file suffixes.

2012-10-23  Paul Eggert  <eggert@cs.ucla.edu>
