@@ -56,7 +56,7 @@ INFO_TARGETS = $(infodir)/ccmode$(INFO_EXT) \
 		$(infodir)/auth$(INFO_EXT) $(infodir)/eieio$(INFO_EXT) $(infodir)/ede$(INFO_EXT) \
 		$(infodir)/semantic$(INFO_EXT) $(infodir)/edt$(INFO_EXT) $(infodir)/emacs-gnutls$(INFO_EXT) \
 		$(infodir)/srecode$(INFO_EXT) $(infodir)/bovine$(INFO_EXT) \
-		$(infodir)/wisent$(INFO_EXT)
+		$(infodir)/wisent$(INFO_EXT) $(infodir)/htmlfontify$(INFO_EXT)
 DVI_TARGETS = calc.dvi cc-mode.dvi cl.dvi dbus.dvi dired-x.dvi \
 		ediff.dvi forms.dvi gnus.dvi message.dvi emacs-mime.dvi \
 		sieve.dvi pgg.dvi mh-e.dvi \
@@ -68,7 +68,7 @@ DVI_TARGETS = calc.dvi cc-mode.dvi cl.dvi dbus.dvi dired-x.dvi \
 		remember.dvi nxml-mode.dvi \
 		epa.dvi mairix-el.dvi sasl.dvi auth.dvi eieio.dvi ede.dvi \
 		semantic.dvi edt.dvi emacs-gnutls.dvi srecode.dvi bovine.dvi \
-		wisent.dvi
+		wisent.dvi htmlfontify.dvi
 INFOSOURCES = info.texi
 
 # The following rule does not work with all versions of `make'.
@@ -374,6 +374,12 @@ $(infodir)/wisent$(INFO_EXT): wisent.texi
 wisent.dvi: wisent.texi
 	$(ENVADD) $(TEXI2DVI) $(srcdir)/wisent.texi
 
+$(infodir)/htmlfontify$(INFO_EXT): htmlfontify.texi
+	$(MAKEINFO) $(MAKEINFO_OPTS) $(INFO_OPTS) -o $@ htmlfontify.texi
+htmlfontify.dvi: htmlfontify.texi
+	$(ENVADD) $(TEXI2DVI) $(srcdir)/htmlfontify.texi
+
+
 $(INFO_TARGETS): doclicense.texi
 $(DVI_TARGETS): doclicense.texi
 
@@ -406,7 +412,8 @@ clean: mostlyclean
 		 $(infodir)/eieio* $(infodir)/ede* \
 		 $(infodir)/semantic* $(infodir)edt* \
 		 $(infodir)/emacs-gnutls* $(infodir)/srecode* \
-		 $(infodir)/bovine* $(infodir)/wisent*
+		 $(infodir)/bovine* $(infodir)/wisent* \
+		 $(infodir)/htmlfontify*
 
 distclean: clean
 	- $(DEL) makefile
